<resources>
    <string name="app_name">Beatles MP3 Player</string>


    <string name="Shuffle_btn">Shuffle</string>
    <string name="Favourites_btn">Favourites</string>
    <string name="Playlist_btn">Playlist</string>
    <string name="Tottal_songs_title">Total Songs</string>
    <string name="Fav_title">Favourite Songs</string>
    <string name="Playlist_title">Play List</string>
    <string name="songs_title">Diljit Dosanjh: CLASH (Official) Music Video | GOAT - YouTube</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="Slogan">Let the Music Speak!</string>

    <string name="min_15">15 Minutes</string>
    <string name="min_30">30 Minutes</string>
    <string name="min_45">45 Minutes</string>
    <string name="search_View">Search View</string>


    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="aboutus">About us</string>
    <string name="exit">Exit</string>
    <string name="playlist_delete">Delete</string>
    <string name="user_name">Your Name</string>
    <string name="playlist_name">Playlist Name</string>


    <string name="aboutUS">About Us</string>
    <string name="developer">Moazam Saleem</string>
    <string name="gmail">brainsmedia.1@gmail.com</string>
    <string name="share">Share</string>
    <string name="RateUs">Rate Us:</string>
    <string name="brains_media">Brains Media</string>
    <string name="owner">Owner:</string>
    <string name="moazam_saleem">Moazam Saleem</string>
    <string name="developed_by">Developed By:</string>
    <string name="g_mail">Gmail</string>
    <string name="reach_us">Reach Us:</string>
    <string name="address">Address:</string>
    <string name="Address_office">Khan Tower Shahdara</string>
    <string name="rate_request">If our app worths using. Would you please rate us on Playstore. Please Give us your valuable feedback. This will help us to improve our App</string>



</resources>