<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:padding="@dimen/_5sdp">

    <LinearLayout
        android:padding="@dimen/_7sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:id="@+id/layout_min15">
        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/ic_timer" />

        <TextView
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/min_15"
            android:id="@+id/min15_txt"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/white"
            />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/darkorange"
        android:layout_marginHorizontal="@dimen/_10sdp"/>

    <LinearLayout
        android:padding="@dimen/_7sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:id="@+id/layout_min30">
        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/ic_timer" />

        <TextView
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/min_30"
            android:id="@+id/min30_txt"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/white"
            />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/darkorange"
        android:layout_marginHorizontal="@dimen/_10sdp"/>
    <LinearLayout
        android:padding="@dimen/_7sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:id="@+id/layout_min45">
        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/ic_timer" />

        <TextView
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/min_45"
            android:id="@+id/min45_txt"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/white"
            />

    </LinearLayout>
</LinearLayout>